--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   dots_indicator: ^2.1.0
   get:
+  firebase_core: ^2.4.0
 
 dev_dependencies:
   flutter_test:
